fully working (could still be buggy) first version

--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!-- index.html -->
 <div id="app"></div>
+<link rel="stylesheet" href="./bootstrap.min.css"/>
+<!-- <script src="./paho-mqtt.js"></script> -->
 <script src="./bundle.js"></script>
 
